add some additional services to each model